--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,19 @@ dependencies {
     //黄油刀
     compile 'com.jakewharton:butterknife-compiler:+'
     compile 'com.jakewharton:butterknife:+'
+
+    //配置retrofit2.0
+    compile 'com.squareup.retrofit2:retrofit:+'
+    compile 'com.squareup.retrofit2:converter-gson:+'
+    //Rxjava2
+    compile 'io.reactivex.rxjava2:rxjava:+'
+    compile 'io.reactivex.rxjava2:rxandroid:+'
+    //让retrofit支持Rxjava2
+    compile 'com.squareup.retrofit2:adapter-rxjava2:+'
+
+    //Fresco图片加载框架faceBook公司出品
+    compile 'com.facebook.fresco:fresco:+'
+    compile 'com.facebook.fresco:animated-gif:+'   //支持gif的fresco
+
+
 }
